--- a/Temas por día/Semana 1/20-11-2020/Programacion funcional/Franchi-Ejercicios-7-Programacion-Funcional.ipynb
+++ b/Temas por día/Semana 1/20-11-2020/Programacion funcional/Franchi-Ejercicios-7-Programacion-Funcional.ipynb
@@ -23,10 +23,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[500.0, 1800.0]\n[1500.0, 2200.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def descuento(precio, desc):\n",
+    "    '''El descuento que se le aplicará al precio\n",
+    "    debe ser en decimales (no en porcentajes).\n",
+    "    Ejemplo, si se desea aplicar un 50% de descuentos,\n",
+    "    ingresar 0.5)'''\n",
+    "    return (precio - precio * desc)\n",
+    "\n",
+    "def iva(precio, valorAgregado):\n",
+    "    '''El IVA que se le aplicará al precio\n",
+    "    debe ser en decimales (no en porcentajes).\n",
+    "    Ejemplo, si se desea agregar un 50% de IVA,\n",
+    "    ingresar 0.5)'''\n",
+    "    return precio + precio * valorAgregado\n",
+    "\n",
+    "def total(diccionario, funcion):\n",
+    "    listaPrecios = []\n",
+    "    for precio, valor in diccionario.items():\n",
+    "        listaPrecios.append(funcion(precio, valor))\n",
+    "    sum(listaPrecios)\n",
+    "    return(listaPrecios)\n",
+    "\n",
+    "print(total({1000: 0.5, 2000: 0.1}, descuento))\n",
+    "print(total({1000: 0.5, 2000: 0.1}, iva))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -65,10 +97,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[1, 4, 9]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 3
+    }
+   ],
+   "source": [
+    "def aplicarFuncion(funcion, lista):\n",
+    "    return list(map(funcion, lista))\n",
+    "\n",
+    "def cuadrado(n):\n",
+    "    return n*n\n",
+    "\n",
+    "aplicarFuncion(cuadrado, [1,2,3])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -107,10 +158,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{'Hola': 4, 'como': 4, 'estas': 5}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 11
+    }
+   ],
+   "source": [
+    "def palabrasYLongitud(frase):\n",
+    "    diccionario = {}\n",
+    "    palabras = frase.split()\n",
+    "    for palabra in palabras:\n",
+    "        diccionario[palabra] = len(palabra)\n",
+    "    return diccionario\n",
+    "\n",
+    "palabrasYLongitud('Hola como estas')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -149,10 +220,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{'MATEMATICAS': 'Aprobado', 'INGLES': 'Desaprobado'}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 14
+    }
+   ],
+   "source": [
+    "def calificacion(nota):\n",
+    "    if nota >= 6:\n",
+    "        return \"Aprobado\"\n",
+    "    else:\n",
+    "        return \"Desaprobado\"\n",
+    "\n",
+    "def calificaciones(diccionario):\n",
+    "    keys = map(str.upper, diccionario.keys())\n",
+    "    valores = map(calificacion, diccionario.values())\n",
+    "    return dict(zip(keys, valores))\n",
+    "\n",
+    "calificaciones({'Matematicas': 9, 'Ingles': 5})"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -271,7 +366,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.3-final"
   }
  },
  "nbformat": 4,
