--- a/Temas por día/Semana 1/20-11-2020/Programacion funcional/Franchi-Solucion-7-Programacion-Funcional.ipynb
+++ b/Temas por día/Semana 1/20-11-2020/Programacion funcional/Franchi-Solucion-7-Programacion-Funcional.ipynb
@@ -23,9 +23,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'apply_discount' is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-67f05491e9c4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     25\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mtotal\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     26\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 27\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'El precio de la compra tras aplicar los descuentos es: '\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mprice_basket\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m{\u001b[0m\u001b[1;36m1000\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m20\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m500\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m100\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mapply_discount\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     28\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'El precio de la compra tras aplicar el IVA es: '\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mprice_basket\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m{\u001b[0m\u001b[1;36m1000\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m20\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m500\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m100\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mapply_IVA\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'apply_discount' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Solución\n",
     "def apply_IVA(price, percentage):\n",
@@ -62,7 +74,31 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def descuento(precio, desc):\n",
+    "    '''El descuento que se le aplicará al precio\n",
+    "    debe ser en decimales (no en porcentajes).\n",
+    "    Ejemplo, si se desea aplicar un 50% de descuentos,\n",
+    "    ingresar 0.5)'''\n",
+    "    return (precio - precio * desc)\n",
+    "\n",
+    "def iva(precio, valorAgregado):\n",
+    "    '''El IVA que se le aplicará al precio\n",
+    "    debe ser en decimales (no en porcentajes).\n",
+    "    Ejemplo, si se desea agregar un 50% de IVA,\n",
+    "    ingresar 0.5)'''\n",
+    "    return precio + precio * valorAgregado\n",
+    "\n",
+    "def total(diccionario, funcion):\n",
+    "    listaPrecios = []\n",
+    "    for precio, valor in diccionario.items():\n",
+    "        listaPrecios.append(funcion(precio, valor))\n",
+    "    sum(listaPrecios)\n",
+    "    return(listaPrecios)\n",
+    "\n",
+    "print(total({1000: 0.5, 2000: 0.1}, descuento))\n",
+    "print(total({1000: 0.5, 2000: 0.1}, iva))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -172,7 +208,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def aplicarFuncion(funcion, lista):\n",
+    "    return list(map(funcion, lista))\n",
+    "\n",
+    "def cuadrado(n):\n",
+    "    return n*n\n",
+    "\n",
+    "aplicarFuncion(cuadrado, [1,2,3])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -264,7 +308,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def palabrasYLongitud(frase):\n",
+    "    diccionario = {}\n",
+    "    palabras = frase.split()\n",
+    "    for palabra in palabras:\n",
+    "        diccionario[palabra] = len(palabra)\n",
+    "    return diccionario\n",
+    "\n",
+    "palabrasYLongitud('Hola como estas')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -386,7 +439,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def calificacion(nota):\n",
+    "    if nota >= 6:\n",
+    "        return \"Aprobado\"\n",
+    "    else:\n",
+    "        return \"Desaprobado\"\n",
+    "\n",
+    "def calificaciones(diccionario):\n",
+    "    keys = map(str.upper, diccionario.keys())\n",
+    "    valores = map(calificacion, diccionario.values())\n",
+    "    return dict(zip(keys, valores))\n",
+    "\n",
+    "calificaciones({'Matematicas': 9, 'Ingles': 5})"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -638,7 +704,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.3-final"
   }
  },
  "nbformat": 4,
