--- a/Temas por día/Semana 2/24-11-2020/Objetos/Franchi-POO-Induccion.ipynb
+++ b/Temas por día/Semana 2/24-11-2020/Objetos/Franchi-POO-Induccion.ipynb
@@ -10,17 +10,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0-final"
+   "version": "3.8.3-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.9.0 64-bit",
-   "metadata": {
-    "interpreter": {
-     "hash": "2e3c1e8da6e821b0193601da5a0e541c0efda9704da45b6b820f5f4c317f2def"
-    }
-   }
+   "display_name": "Python 3"
   }
  },
  "nbformat": 4,
@@ -28,7 +23,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +255,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-144-11abc0c5e780>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdel\u001b[0m \u001b[0malumno1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnombre\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0malumno1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnombre\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0malumno1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmostrarNombreNota\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-26-11abc0c5e780>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdel\u001b[0m \u001b[0malumno1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnombre\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0malumno1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnombre\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0malumno1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmostrarNombreNota\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mAttributeError\u001b[0m: 'Alumno' object has no attribute 'nombre'"
      ]
     }
@@ -539,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -619,23 +614,11 @@
      "text": [
       "nivel Graves 3\nnivel Graves 4\n"
      ]
-    },
-    {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'ControlVolumen' is not defined",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-98-188d1fe4ba7c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mControlGraves\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mGraves\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mControlGraves\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msubir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mdel\u001b[0m \u001b[0mControlVolumen\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;32mdel\u001b[0m \u001b[0mControlGraves\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mControlGraves\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msubir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'ControlVolumen' is not defined"
-     ]
     }
    ],
    "source": [
     "ControlGraves = Graves()\n",
     "ControlGraves.subir()\n",
-    "del ControlVolumen\n",
     "del ControlGraves"
    ]
   },
@@ -719,6 +702,396 @@
     "print(isinstance(movil1, Movil))\n",
     "print(isinstance(movil1, Camara))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#----------------------------------------------------PARTE 3----------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Movil encendido\nReproduciendo lista mp3\nMovil apagado\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Telefono:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "    \n",
+    "    def telefonear(self):\n",
+    "        print(\"Llamando\")\n",
+    "\n",
+    "    def colgar(self):\n",
+    "        print(\"Colgando\")\n",
+    "\n",
+    "\n",
+    "class Camara:\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "\n",
+    "    def fotografiar(self):\n",
+    "        print(\"Fotografiando\")\n",
+    "\n",
+    "\n",
+    "class Reproductor:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "\n",
+    "    def reproducirmp3(self):\n",
+    "        print(\"Reproduciendo MP3\")\n",
+    "    \n",
+    "    def reproducirVideo(self):\n",
+    "        print(\"Reproduciendo video\")\n",
+    "\n",
+    "\n",
+    "class Movil(Telefono, Camara, Reproductor):\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        print('Movil encendido')\n",
+    "\n",
+    "    def reproducirmp3(self):\n",
+    "        print('Reproduciendo lista mp3')\n",
+    "\n",
+    "    def __del__(self):\n",
+    "        print('Movil apagado')\n",
+    "\n",
+    "movil3 = Movil()\n",
+    "movil3.reproducirmp3()\n",
+    "del movil3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(5, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Punto:\n",
+    "    def __init__(self, x = 0, y = 0):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "\n",
+    "    def __add__(self, other):\n",
+    "        x = self.x + other.x\n",
+    "        y = self.y + other.y\n",
+    "        return x, y\n",
+    "\n",
+    "punto1 = Punto(4, 6)\n",
+    "punto2 = Punto(1, -2)\n",
+    "\n",
+    "print(punto1 + punto2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "12\n110\n1570.8 Euros\n"
+     ]
+    },
+    {
+     "output_type": "error",
+     "ename": "AttributeError",
+     "evalue": "type object 'Factura' has no attribute '__tasa'",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-35-2a53c1260daa>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcompra1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mprecio\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcompra1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0maPagar\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Euros\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mFactura\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__tasa\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: type object 'Factura' has no attribute '__tasa'"
+     ]
+    }
+   ],
+   "source": [
+    "class Factura:\n",
+    "    __tasa = 19\n",
+    "\n",
+    "    def __init__(self, unidad, precio):\n",
+    "        self.unidad = unidad\n",
+    "        self.precio = precio\n",
+    "    \n",
+    "    def aPagar(self):\n",
+    "        total = self.unidad * self.precio  \n",
+    "        impuesto = total * (Factura.__tasa / 100)\n",
+    "        return (total + impuesto)\n",
+    "\n",
+    "compra1 = Factura(12, 110)\n",
+    "print(compra1.unidad)\n",
+    "print(compra1.precio)\n",
+    "print(compra1.aPagar(), \"Euros\")\n",
+    "print(Factura.__tasa)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "19\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(compra1._Factura__tasa)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Francisco\nFrancisco Javier , 20000\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Empleado:\n",
+    "\n",
+    "    def __init__(self, nombre, salario):\n",
+    "        self.__nombre = nombre\n",
+    "        self.__salario = salario\n",
+    "\n",
+    "    def getNombre(self):\n",
+    "        return self.__nombre\n",
+    "\n",
+    "    def getSalario(self):\n",
+    "        return self.__salario\n",
+    "\n",
+    "    def setNombre(self, nuevoNombre):\n",
+    "        self.__nombre = nuevoNombre\n",
+    "    \n",
+    "    def setSalario(self, nuevoSalario):\n",
+    "        self.__salario = nuevoSalario\n",
+    "\n",
+    "\n",
+    "empleado1 = Empleado(\"Francisco\", 20000)\n",
+    "print(empleado1.getNombre())\n",
+    "empleado1.setNombre(\"Francisco Javier\")\n",
+    "print(empleado1.getNombre(), \",\", empleado1.getSalario())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Rosa 20000\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Empleado:\n",
+    "\n",
+    "    def __init__(self, nombre, salario):\n",
+    "        self.__nombre = nombre\n",
+    "        self.__salario = salario\n",
+    "\n",
+    "    def __getNombre(self):\n",
+    "        return self.__nombre\n",
+    "\n",
+    "    def __getSalario(self):\n",
+    "        return self.__salario\n",
+    "\n",
+    "    def __setNombre(self, nuevoNombre):\n",
+    "        self.__nombre = nuevoNombre\n",
+    "    \n",
+    "    def __setSalario(self, nuevoSalario):\n",
+    "        self.__salario = nuevoSalario\n",
+    "\n",
+    "    def __delNombre(self):\n",
+    "        del self.__nombre\n",
+    "\n",
+    "    def __delSalario(self):\n",
+    "        del self.__salario\n",
+    "    \n",
+    "    nombre = property(fget =  __getNombre, fset = __setNombre, fdel = __delNombre, doc = \"Soy la propiedad 'nombre'\")\n",
+    "    salario = property(fget = __getSalario, doc = \"Soy la propiedad 'salario'\")\n",
+    "\n",
+    "empleado1 = Empleado(\"Francisco\", 20000)\n",
+    "empleado1.nombre = \"Rosa\"\n",
+    "print(empleado1.nombre, empleado1.salario)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del empleado1.nombre"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "ClaseX.metodo1()\nClaseA1.metodo2()\nClaseA.metodo3()\nClaseA.metodo4()\n(<class '__main__.ClaseX'>, <class '__main__.ClaseA1'>, <class '__main__.ClaseA2'>, <class '__main__.ClaseA'>, <class 'object'>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "class ClaseA(object):\n",
+    "    \n",
+    "    def metodo1(self):\n",
+    "        print(\"ClaseA.metodo1()\")\n",
+    "\n",
+    "    def metodo3(self):\n",
+    "        print(\"ClaseA.metodo3()\")\n",
+    "\n",
+    "    def metodo4(self):\n",
+    "        print(\"ClaseA.metodo4()\")\n",
+    "\n",
+    "class ClaseA1(ClaseA):\n",
+    "\n",
+    "    def metodo1(self):\n",
+    "        print(\"ClaseA1.metodo1()\")\n",
+    "\n",
+    "    def metodo2(self):\n",
+    "        print(\"ClaseA1.metodo2()\")\n",
+    "\n",
+    "class ClaseA2(ClaseA):\n",
+    "\n",
+    "    def metodo1(self):\n",
+    "        print(\"ClaseA.metodo1()\")\n",
+    "\n",
+    "    def metodo3(self):\n",
+    "        print(\"ClaseA.metodo3()\")\n",
+    "\n",
+    "class ClaseX(ClaseA1, ClaseA2):\n",
+    "    def metodo1(self):\n",
+    "        print(\"ClaseX.metodo1()\")\n",
+    "\n",
+    "objeto1 = ClaseX()\n",
+    "\n",
+    "objeto1.metodo1()\n",
+    "objeto1.metodo2()\n",
+    "objeto1.metodo3()\n",
+    "objeto1.metodo4()\n",
+    "print(ClaseX.__mro__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Clase3.__init__,Clase1.__init__\nClase4.__init__,Clase2.__init__\n(<class '__main__.Clase3'>, <class '__main__.Clase1'>, <class '__main__.Clase2'>, <class 'object'>)\n(<class '__main__.Clase4'>, <class '__main__.Clase2'>, <class '__main__.Clase1'>, <class 'object'>)\nClase3.metodo1(),Clase1.metodo1()\nClase4.metodo1(),Clase2.metodo1()\n1\n2\n3\n4\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Clase1(object):\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.var1 = 1\n",
+    "        print(\"Clase1.__init__\")\n",
+    "\n",
+    "    def metodo1(self):\n",
+    "        self.var2 = 2\n",
+    "        print(\"Clase1.metodo1()\")\n",
+    "\n",
+    "class Clase2(object):\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.var1 = 2\n",
+    "        print(\"Clase2.__init__\")\n",
+    "\n",
+    "    def metodo1(self):\n",
+    "        self.var2 = 2\n",
+    "        print(\"Clase2.metodo1()\")\n",
+    "\n",
+    "class Clase3(Clase1, Clase2):\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.var1 = 3\n",
+    "        print(\"Clase3.__init__\", end = ',')\n",
+    "        super().__init__()\n",
+    "\n",
+    "    def metodo1(self):\n",
+    "        print(\"Clase3.metodo1()\", end = ',')\n",
+    "        super().metodo1()\n",
+    "        self.var2 = 3\n",
+    "\n",
+    "class Clase4(Clase2, Clase1):\n",
+    "    def __init__(self):\n",
+    "        self.var1 = 4\n",
+    "        print(\"Clase4.__init__\", end = ',')\n",
+    "        super().__init__()\n",
+    "\n",
+    "    def metodo1(self):\n",
+    "        print(\"Clase4.metodo1()\", end = ',')\n",
+    "        super().metodo1()\n",
+    "        self.var2 = 4\n",
+    "\n",
+    "objeto1 = Clase3()\n",
+    "objeto2 = Clase4()\n",
+    "\n",
+    "print(Clase3.__mro__)\n",
+    "print(Clase4.__mro__)\n",
+    "\n",
+    "objeto1.metodo1()\n",
+    "objeto2.metodo1()\n",
+    "\n",
+    "print(objeto1.var1)\n",
+    "print(objeto2.var1)\n",
+    "print(objeto1.var2)\n",
+    "print(objeto2.var2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
