ejercicios POO obligatorios casi hechos

--- a/Temas por día/Semana 2/24-11-2020/Objetos/Franchi-Ejercicios-19-POO.ipynb
+++ b/Temas por día/Semana 2/24-11-2020/Objetos/Franchi-Ejercicios-19-POO.ipynb
@@ -30,10 +30,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class NumeroComplejo:\n",
+    "    def __init__(self, posX, posY):\n",
+    "        self.x = posX\n",
+    "        self.y = posY\n",
+    "\n",
+    "complejo1 = NumeroComplejo(2,3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -51,10 +58,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "( 2 , 3 )\nNone\n"
+     ]
+    }
+   ],
+   "source": [
+    "class NumeroComplejo:\n",
+    "    def __init__(self, posX, posY):\n",
+    "        self.x = posX\n",
+    "        self.y = posY\n",
+    "    \n",
+    "    def imprimirInstancia(self):\n",
+    "        print('(',self.x, ',', self.y, ')')\n",
+    "\n",
+    "complejo1 = NumeroComplejo(2,3)\n",
+    "print(complejo1.imprimirInstancia())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -72,10 +98,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(2,3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "class NumeroComplejo:\n",
+    "    def __init__(self, posX, posY):\n",
+    "        self.x = posX\n",
+    "        self.y = posY\n",
+    "    \n",
+    "    def imprimirInstancia(self):\n",
+    "        print('(',self.x, ',', self.y, ')')\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        complejo = '(' + str(self.x) + \",\" + str(self.y) + ')'\n",
+    "        return complejo\n",
+    "\n",
+    "complejo1 = NumeroComplejo(2,3)\n",
+    "print(complejo1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -93,10 +142,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Los complejos ingresados NO son iguales\nLos complejos ingresados NO son iguales\nLos complejos ingresados son iguales\n"
+     ]
+    }
+   ],
+   "source": [
+    "class NumeroComplejo:\n",
+    "    def __init__(self, posX, posY):\n",
+    "        self.x = posX\n",
+    "        self.y = posY\n",
+    "    \n",
+    "    def imprimirInstancia(self):\n",
+    "        print('(',self.x, ',', self.y, ')')\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        complejo = '(' + str(self.x) + \",\" + str(self.y) + ')'\n",
+    "        return complejo\n",
+    "\n",
+    "    def comparacion(self, other):\n",
+    "        if (self.x == other.x and self.y == other.y):\n",
+    "            return(print(\"Los complejos ingresados son iguales\"))\n",
+    "        else:\n",
+    "            return(print(\"Los complejos ingresados NO son iguales\"))\n",
+    "\n",
+    "complejo3 = NumeroComplejo(2,3)\n",
+    "\n",
+    "complejo1.comparacion(complejo2)\n",
+    "complejo2.comparacion(complejo3)\n",
+    "complejo1.comparacion(complejo3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -114,10 +195,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(5,7)\n"
+     ]
+    }
+   ],
+   "source": [
+    "class NumeroComplejo:\n",
+    "    def __init__(self, posX, posY):\n",
+    "        self.x = posX\n",
+    "        self.y = posY\n",
+    "    \n",
+    "    def imprimirInstancia(self):\n",
+    "        print('(',self.x, ',', self.y, ')')\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        complejo = '(' + str(self.x) + \",\" + str(self.y) + ')'\n",
+    "        return complejo\n",
+    "\n",
+    "    def comparacion(self, other):\n",
+    "        if (self.x == other.x and self.y == other.y):\n",
+    "            return(print(\"Los complejos ingresados son iguales\"))\n",
+    "        else:\n",
+    "            return(print(\"Los complejos ingresados NO son iguales\"))\n",
+    "\n",
+    "    def __add__(self, other):\n",
+    "        newPosX = self.x + other.x \n",
+    "        newPosY = self.y + other.y\n",
+    "        complejoSuma = NumeroComplejo(newPosX, newPosY) \n",
+    "        print(complejoSuma)\n",
+    "\n",
+    "complejo1 = NumeroComplejo(2,3)\n",
+    "complejo2 = NumeroComplejo(3,4)\n",
+    "complejo1.__add__(complejo2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -142,10 +259,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(Francisco, 21)\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Persona:\n",
+    "\n",
+    "    def __init__(self, nombre, edad):\n",
+    "        self.nombre = nombre\n",
+    "        self.edad = edad\n",
+    "    \n",
+    "    def cumpleaños(self):\n",
+    "        self.edad += 1\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        persona = '(' + str(self.nombre) + \", \" + str(self.edad) + ')'\n",
+    "        return persona\n",
+    "    \n",
+    "persona1 = Persona(\"Francisco\", 20)\n",
+    "persona1.cumpleaños()\n",
+    "print(persona1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -227,7 +369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.3-final"
   }
  },
  "nbformat": 4,
