--- a/Temas por día/Semana 2/24-11-2020 y 25-11-2020/Objetos/Franchi-Ejercicios-19-POO.ipynb
+++ b/Temas por día/Semana 2/24-11-2020 y 25-11-2020/Objetos/Franchi-Ejercicios-19-POO.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -172,6 +172,8 @@
     "        else:\n",
     "            return(print(\"Los complejos ingresados NO son iguales\"))\n",
     "\n",
+    "complejo1 = NumeroComplejo(2,3)\n",
+    "complejo2 = NumeroComplejo(3,4)\n",
     "complejo3 = NumeroComplejo(2,3)\n",
     "\n",
     "complejo1.comparacion(complejo2)\n",
@@ -305,10 +307,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(Francisco, 20)\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Persona:\n",
+    "\n",
+    "    def __init__(self, nombre, edad):\n",
+    "        self.nombre = nombre\n",
+    "        self.edad = edad\n",
+    "    \n",
+    "    def cumpleaños(self):\n",
+    "        self.edad += 1\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        persona = '(' + str(self.nombre) + \", \" + str(self.edad) + ')'\n",
+    "        return persona\n",
+    "        \n",
+    "persona1 = Persona(\"Francisco\", 20)\n",
+    "print(persona1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -326,10 +352,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(Francisco, 20)\nLa persona ingresada no puede ser el chofer ya que es mayor de edad\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Persona:\n",
+    "\n",
+    "    def __init__(self, nombre, edad):\n",
+    "        self.nombre = nombre\n",
+    "        self.edad = edad\n",
+    "    \n",
+    "    def cumpleaños(self):\n",
+    "        self.edad += 1\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        persona = '(' + str(self.nombre) + \", \" + str(self.edad) + ')'\n",
+    "        return persona\n",
+    "        \n",
+    "class Bus:\n",
+    "\n",
+    "    chofer = 0\n",
+    "\n",
+    "    def __init__(self, pasajeros, capacidad):\n",
+    "\n",
+    "        self.pasajeros = pasajeros\n",
+    "        self.capacidad = capacidad\n",
+    "    \n",
+    "    def ingresarChofer(self, persona):\n",
+    "        if persona.edad > 18:\n",
+    "            Bus.chofer = persona \n",
+    "        else:\n",
+    "            print(\"La persona ingresada no puede ser el chofer ya que es mayor de edad\")\n",
+    "\n",
+    "a1 = []\n",
+    "persona1 = Persona(\"Francisco\", 20)\n",
+    "persona2 = Persona(\"Rodrigo\", 17)\n",
+    "bus1 = Bus(a1, 20)\n",
+    "bus1.ingresarChofer(persona1)\n",
+    "print(Bus.chofer)\n",
+    "bus1.ingresarChofer(persona2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -342,22 +412,81 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Extender la clase **Bus** con el método **subir_pasajero(self, persona)**. Este método sube a la persona al bus (i.e. La agrega al arreglo de asientos) siempre que el número de pasajeros en el Bus sea menor que la capcidad total."
+    "Extender la clase **Bus** con el método **subir_pasajero(self, persona)**. Este método sube a la persona al bus (i.e. La agrega al arreglo de asientos) siempre que el número de pasajeros en el Bus sea menor que la capacidad total."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[<__main__.Persona object at 0x0000021F79B28FA0>], 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Persona:\n",
+    "\n",
+    "    def __init__(self, nombre, edad):\n",
+    "        self.nombre = nombre\n",
+    "        self.edad = edad\n",
+    "    \n",
+    "    def cumpleaños(self):\n",
+    "        self.edad += 1\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        persona = '(' + str(self.nombre) + \", \" + str(self.edad) + ')'\n",
+    "        return persona\n",
+    "        \n",
+    "class Bus:\n",
+    "\n",
+    "    chofer = 0\n",
+    "\n",
+    "    def __init__(self, pasajeros, capacidad):\n",
+    "\n",
+    "        self.pasajeros = pasajeros\n",
+    "        self.capacidad = capacidad\n",
+    "    \n",
+    "    def ingresarChofer(self, persona):\n",
+    "        \n",
+    "        if persona.edad > 18:\n",
+    "            Bus.chofer = persona \n",
+    "        else:\n",
+    "            print(\"La persona ingresada no puede ser el chofer ya que es mayor de edad\")\n",
+    "\n",
+    "    def subirPasajeros(self,persona):\n",
+    "\n",
+    "        if self.capacidad > len(self.pasajeros):\n",
+    "            self.pasajeros.append(persona)\n",
+    "            self.capacidad -= 1\n",
+    "        else:\n",
+    "            print(\"El bus no puede subir más personas ya que está al máximo de su capacidad\")\n",
+    "\n",
+    "    def __str__(self):\n",
+    "\n",
+    "        bus = str(self.pasajeros) + \", \" + str(self.capacidad)\n",
+    "        return bus\n",
+    "\n",
+    "persona1 = Persona(\"Francisco\", 20)\n",
+    "bus1 = Bus([], 2)\n",
+    "bus1.subirPasajeros(persona1)\n",
+    "print(bus1)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.9.0 64-bit",
+   "metadata": {
+    "interpreter": {
+     "hash": "2e3c1e8da6e821b0193601da5a0e541c0efda9704da45b6b820f5f4c317f2def"
+    }
+   }
   },
   "language_info": {
    "codemirror_mode": {
@@ -369,7 +498,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3-final"
+   "version": "3.9.0-final"
   }
  },
  "nbformat": 4,
