--- a/Temas por día/Semana 2/24-11-2020 y 25-11-2020/Objetos/Franchi-Solucion-19-POO.ipynb
+++ b/Temas por día/Semana 2/24-11-2020 y 25-11-2020/Objetos/Franchi-Solucion-19-POO.ipynb
@@ -51,7 +51,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class NumeroComplejo:\n",
+    "    def __init__(self, posX, posY):\n",
+    "        self.x = posX\n",
+    "        self.y = posY\n",
+    "\n",
+    "complejo1 = NumeroComplejo(2,3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -94,7 +101,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class NumeroComplejo:\n",
+    "    def __init__(self, posX, posY):\n",
+    "        self.x = posX\n",
+    "        self.y = posY\n",
+    "    \n",
+    "    def imprimirInstancia(self):\n",
+    "        print('(',self.x, ',', self.y, ')')\n",
+    "\n",
+    "complejo1 = NumeroComplejo(2,3)\n",
+    "print(complejo1.imprimirInstancia())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -112,9 +130,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "6,9\n"
+     ]
+    }
+   ],
    "source": [
     "# Solución 3\n",
     "class NumeroComplejo:\n",
@@ -143,7 +169,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class NumeroComplejo:\n",
+    "    def __init__(self, posX, posY):\n",
+    "        self.x = posX\n",
+    "        self.y = posY\n",
+    "    \n",
+    "    def imprimirInstancia(self):\n",
+    "        print('(',self.x, ',', self.y, ')')\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        complejo = '(' + str(self.x) + \",\" + str(self.y) + ')'\n",
+    "        return complejo\n",
+    "\n",
+    "complejo1 = NumeroComplejo(2,3)\n",
+    "print(complejo1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -192,10 +233,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Los complejos ingresados NO son iguales\nLos complejos ingresados NO son iguales\nLos complejos ingresados son iguales\n"
+     ]
+    }
+   ],
+   "source": [
+    "class NumeroComplejo:\n",
+    "    def __init__(self, posX, posY):\n",
+    "        self.x = posX\n",
+    "        self.y = posY\n",
+    "    \n",
+    "    def imprimirInstancia(self):\n",
+    "        print('(',self.x, ',', self.y, ')')\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        complejo = '(' + str(self.x) + \",\" + str(self.y) + ')'\n",
+    "        return complejo\n",
+    "\n",
+    "    def comparacion(self, other):\n",
+    "        if (self.x == other.x and self.y == other.y):\n",
+    "            return(print(\"Los complejos ingresados son iguales\"))\n",
+    "        else:\n",
+    "            return(print(\"Los complejos ingresados NO son iguales\"))\n",
+    "\n",
+    "\n",
+    "complejo1 = NumeroComplejo(2,3)\n",
+    "complejo2 = NumeroComplejo(3,4)\n",
+    "complejo3 = NumeroComplejo(2,3)\n",
+    "\n",
+    "complejo1.comparacion(complejo2)\n",
+    "complejo2.comparacion(complejo3)\n",
+    "complejo1.comparacion(complejo3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -253,7 +329,35 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class NumeroComplejo:\n",
+    "    def __init__(self, posX, posY):\n",
+    "        self.x = posX\n",
+    "        self.y = posY\n",
+    "    \n",
+    "    def imprimirInstancia(self):\n",
+    "        print('(',self.x, ',', self.y, ')')\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        complejo = '(' + str(self.x) + \",\" + str(self.y) + ')'\n",
+    "        return complejo\n",
+    "\n",
+    "    def comparacion(self, other):\n",
+    "        if (self.x == other.x and self.y == other.y):\n",
+    "            return(print(\"Los complejos ingresados son iguales\"))\n",
+    "        else:\n",
+    "            return(print(\"Los complejos ingresados NO son iguales\"))\n",
+    "\n",
+    "    def __add__(self, other):\n",
+    "        newPosX = self.x + other.x \n",
+    "        newPosY = self.y + other.y\n",
+    "        complejoSuma = NumeroComplejo(newPosX, newPosY) \n",
+    "        print(complejoSuma)\n",
+    "\n",
+    "complejo1 = NumeroComplejo(2,3)\n",
+    "complejo2 = NumeroComplejo(3,4)\n",
+    "complejo1.__add__(complejo2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -301,7 +405,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Persona:\n",
+    "\n",
+    "    def __init__(self, nombre, edad):\n",
+    "        self.nombre = nombre\n",
+    "        self.edad = edad\n",
+    "    \n",
+    "    def cumpleaños(self):\n",
+    "        self.edad += 1\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        persona = '(' + str(self.nombre) + \", \" + str(self.edad) + ')'\n",
+    "        return persona\n",
+    "    \n",
+    "persona1 = Persona(\"Francisco\", 20)\n",
+    "persona1.cumpleaños()\n",
+    "print(persona1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -344,7 +465,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Persona:\n",
+    "\n",
+    "    def __init__(self, nombre, edad):\n",
+    "        self.nombre = nombre\n",
+    "        self.edad = edad\n",
+    "    \n",
+    "    def cumpleaños(self):\n",
+    "        self.edad += 1\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        persona = '(' + str(self.nombre) + \", \" + str(self.edad) + ')'\n",
+    "        return persona\n",
+    "        \n",
+    "persona1 = Persona(\"Francisco\", 20)\n",
+    "print(persona1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -414,7 +551,43 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Persona:\n",
+    "\n",
+    "    def __init__(self, nombre, edad):\n",
+    "        self.nombre = nombre\n",
+    "        self.edad = edad\n",
+    "    \n",
+    "    def cumpleaños(self):\n",
+    "        self.edad += 1\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        persona = '(' + str(self.nombre) + \", \" + str(self.edad) + ')'\n",
+    "        return persona\n",
+    "        \n",
+    "class Bus:\n",
+    "\n",
+    "    chofer = 0\n",
+    "\n",
+    "    def __init__(self, pasajeros, capacidad):\n",
+    "\n",
+    "        self.pasajeros = pasajeros\n",
+    "        self.capacidad = capacidad\n",
+    "    \n",
+    "    def ingresarChofer(self, persona):\n",
+    "        if persona.edad > 18:\n",
+    "            Bus.chofer = persona \n",
+    "        else:\n",
+    "            print(\"La persona ingresada no puede ser el chofer ya que es mayor de edad\")\n",
+    "\n",
+    "a1 = []\n",
+    "persona1 = Persona(\"Francisco\", 20)\n",
+    "persona2 = Persona(\"Rodrigo\", 17)\n",
+    "bus1 = Bus(a1, 20)\n",
+    "bus1.ingresarChofer(persona1)\n",
+    "print(Bus.chofer)\n",
+    "bus1.ingresarChofer(persona2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -491,17 +664,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[<__main__.Persona object at 0x000001E20F85ED60>], 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Persona:\n",
+    "\n",
+    "    def __init__(self, nombre, edad):\n",
+    "        self.nombre = nombre\n",
+    "        self.edad = edad\n",
+    "    \n",
+    "    def cumpleaños(self):\n",
+    "        self.edad += 1\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        persona = '(' + str(self.nombre) + \", \" + str(self.edad) + ')'\n",
+    "        return persona\n",
+    "        \n",
+    "class Bus:\n",
+    "\n",
+    "    chofer = 0\n",
+    "\n",
+    "    def __init__(self, pasajeros, capacidad):\n",
+    "\n",
+    "        self.pasajeros = pasajeros\n",
+    "        self.capacidad = capacidad\n",
+    "    \n",
+    "    def ingresarChofer(self, persona):\n",
+    "        \n",
+    "        if persona.edad > 18:\n",
+    "            Bus.chofer = persona \n",
+    "        else:\n",
+    "            print(\"La persona ingresada no puede ser el chofer ya que es mayor de edad\")\n",
+    "\n",
+    "    def subirPasajeros(self,persona):\n",
+    "\n",
+    "        if self.capacidad > len(self.pasajeros):\n",
+    "            self.pasajeros.append(persona)\n",
+    "            self.capacidad -= 1\n",
+    "        else:\n",
+    "            print(\"El bus no puede subir más personas ya que está al máximo de su capacidad\")\n",
+    "\n",
+    "    def __str__(self):\n",
+    "\n",
+    "        bus = str(self.pasajeros) + \", \" + str(self.capacidad)\n",
+    "        return bus\n",
+    "\n",
+    "persona1 = Persona(\"Francisco\", 20)\n",
+    "bus1 = Bus([], 2)\n",
+    "bus1.subirPasajeros(persona1)\n",
+    "print(bus1)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.9.0 64-bit",
+   "metadata": {
+    "interpreter": {
+     "hash": "2e3c1e8da6e821b0193601da5a0e541c0efda9704da45b6b820f5f4c317f2def"
+    }
+   }
   },
   "language_info": {
    "codemirror_mode": {
@@ -513,7 +745,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.9.0-final"
   }
  },
  "nbformat": 4,
